# InterprocessImageSharing

./: CMakeLists.txt  README.md  generate_proj.bat
shader/: triangle.frag  triangle.vert
src/: CmakeLists.txt  mainReceiver.cpp  mainSender.cpp  offscreen.cpp  offscreen.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
